Signatures and pubKeys are mandatory
